--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,8 +1,8 @@
 
 #projects {
-  padding-top: 8rem;
+  /* padding-top: 8rem;
   margin-top: 8rem;
-  padding-bottom: 8rem;
+  padding-bottom: 8rem; */
   background-color: var(--color-black);
   display: flex;
 }
