--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,14 +2,19 @@ header {
   height: 5rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
   padding-left: 1rem;
   padding-right: 1rem;
+  justify-content: space-between;
+  align-items: center;
+
+  position: absolute;
+  background-color: rgba(34, 34, 34, 0.5);
+  width: 100%;
 }
 
 .header__logo {
-  width: 50%;
+  flex:1;
+  /* width: 50%; */
 }
 
 .header__logo__img {
@@ -18,22 +23,41 @@ header {
 }
 
 .header__info{
-  width: 50%;
+  flex:1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  justify-content: end;
 }
 
 .header__description {
-  font-size: 15px;
-  color: var(--color-text);
+  font-size: 14px;
+  color: #B0B0B0;
   font-weight: 300;
+  font-family: "Pretendard Variabl";
 }
 
-.header__contact {
-  margin-right: 1rem;
-  border: 1px solid var(--color-text);
-  padding: 5px 10px;
-  border-radius: 1rem;
+.header__menu {
+  /* flex:1; */
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  border-radius: 25px;
+  background-color: #2D2D2D; 
+  padding: 10px 20px;
+  height: fit-content;
+}
+
+.menu-item {
+  font-family: "Pretendard Variabl";
+  height: fit-content;
+  font-size: 14px;
+  color: #C3C3C3;
+  padding: 3px 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  text-align: center;
 }
