--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -13,6 +13,11 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+ 
+  @media (max-width: 639px) {
+    width: 300px;
+    margin: 20px 5px;
+  }
 }
 
 .card__header {
