ui) 체리 아이콘 추가 및 애니메이션 추가

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,11 @@ button {
   font-weight: normal;
   font-style: normal;
 }
+
+
+@font-face {
+  font-family: 'DungGeunMo';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
